# lua_fmt

./: .gitattributes  .gitignore  Cargo.toml  README.md  dprint.json  jsr.jsonc  justfile  package.json  rust-toolchain.toml
.github/workflows/: publish.yml  test.yml
crates/lua_fmt/: Cargo.toml
crates/lua_fmt/extra/: lua_fmt_node.js  lua_fmt_vite.js
crates/lua_fmt/scripts/: build.sh  package.mjs
crates/lua_fmt/src/: lib.rs
crates/lua_fmt/test_bun/: bun.spec.ts
crates/lua_fmt/test_data/inputs/: assignment-comments.lua.snap  block-empty-lines.lua.snap  comments-before-punctuation.lua.snap  comments-keep-multiline.lua.snap  comments-multiline-expression-2.lua.snap  condition-parentheses-comments.lua.snap  double-unary-minus.lua.snap  empty-function.lua.snap  excess-parentheses-comments.lua.snap  excess-parentheses.lua.snap  function-call-argument-leading-trivia.lua.snap  function-call-comments-4.lua.snap  function-def-multiline.lua.snap  function-definition-multiline-2.lua.snap  generic-for-multiline-2.lua.snap  generic-for-multiline.lua.snap  hang-binop-comments-2.lua.snap  hang-binop.lua.snap  hang-call-chain-comments.lua.snap  hang-call-chains-2.lua.snap  hang-call-chains-inline.lua.snap  hang-call-chains-static.lua.snap  hang-parens-function-call.lua.snap  hang-prefix-2.lua.snap  hang-prefix.lua.snap  if-comments-2.lua.snap  index-comments.lua.snap  large-example.lua.snap  long-assignment-6.lua.snap  multiline-comments.lua.snap  multiline-expressions-4.lua.snap  punctuated-comments.lua.snap  return-comments-1.lua.snap  return-hanging-expression-2.lua.snap  return-hanging-expression-3.lua.snap  return-hanging-expression.lua.snap  semicolon-1.lua.snap  semicolon-2.lua.snap  semicolon-comments-ordering.lua.snap  string-escapes-2.lua.snap  (+13 more)
crates/lua_fmt/test_deno/: deno.test.ts
crates/lua_fmt/test_node/: test-node.mjs
crates/regex_patch/: Cargo.toml
extra/: lua_fmt_config.d.ts  lua_fmt_esm.js  lua_fmt_node.js  lua_fmt_vite.js  lua_fmt_web.d.ts  lua_fmt_web.js
scripts/: build.sh  doc.d.ts  package.mjs  patch.mjs
src/: lib.rs
test_bun/: bun.spec.ts
test_data/inputs/: assignment-comments-2.lua.snap  assignment-comments-3.lua.snap  comments-buffer.lua.snap  comments-multiline-expression.lua.snap  complex-args.lua.snap  condition-operator-precedence.lua.snap  condition-parentheses.lua.snap  context-long-lines.lua.snap  empty-function-2.lua.snap  excess-parentheses.lua.snap  function-call-3.lua.snap  function-call-4.lua.snap  function-call-6.lua.snap  function-call-8.lua.snap  function-call-comments-2.lua.snap  function-call-comments.lua.snap  function-call-multiline-comment.lua.snap  function-def-comments.lua.snap  generic-for-hug.lua.snap  hang-binop-comments.lua.snap  hang-binop-rhs-precendence.lua.snap  hang-call-chain-comments-2.lua.snap  hang-call-chain-small-prefix.lua.snap  hang-call-chains.lua.snap  hang-equality-op.lua.snap  hang-parens-assign-no-indent.lua.snap  hang-prefix-ignore-string.lua.snap  if-comments-3.lua.snap  if-comments.lua.snap  large-example-2.lua.snap  long-assignment-2.lua.snap  long-assignment-3.lua.snap  long-assignment-5.lua.snap  long-assignment.lua.snap  multiline-expression-comments-1.lua.snap  multiline-expressions-3.lua.snap  multiline-expressions-5.lua.snap  return-comments-2.lua.snap  return-newline-after-token.lua.snap  single-arg-function-calls.lua.snap  (+5 more)
test_data/inputs-lua52/: goto-1.lua.snap  goto-2.lua.snap
test_deno/: deno.test.ts
test_node/: node.test.mjs  test-node.mjs
