[workspace]
members  = ["crates/*"]
resolver = "2"


    [workspace.package]
    authors     = ["magic-akari <akari.ccino@gmail.com>"]
    description = "A WASM based Lua Formatter"
    edition     = "2021"
    homepage    = "https://github.com/wasm-fmt/lua_fmt"
    keywords    = ["wasm", "stylua", "lua", "formatter"]
    license     = "MIT"
    readme      = "README.md"
    repository  = "https://github.com/wasm-fmt/lua_fmt"
    version     = "0.0.4"


    [workspace.dependencies]
    serde              = "1.0"
    serde-wasm-bindgen = "0.6"
    serde_json         = "1.0.116"
    wasm-bindgen       = "0.2.92"

    stylua = { version = "0.20.0", default-features = false }

[profile.release]
lto       = true
opt-level = "s"
