[workspace]
members  = ["crates/*"]
resolver = "2"


    [workspace.package]
    authors     = ["magic-akari <akari.ccino@gmail.com>"]
    description = "A WASM based Lua Formatter"
    edition     = "2021"
    homepage    = "https://github.com/wasm-fmt/lua_fmt"
    keywords    = ["wasm", "stylua", "lua", "formatter"]
    license     = "MIT"
    readme      = "README.md"
    repository  = "https://github.com/wasm-fmt/lua_fmt"
    version     = "0.0.5"


    [workspace.dependencies]
    serde              = "1.0"
    serde-wasm-bindgen = "0.6"
    serde_json         = "1.0"
    wasm-bindgen       = "0.2.95"

    stylua = { version = "2.0.0", default-features = false }

[profile.release]
codegen-units = 1
debug         = false     # set to `true` for debug information
lto           = true
opt-level     = "s"
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.
strip         = "symbols" # set to `false` for debug information
